--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,10 +3,36 @@
 <header class="sticky-top" style="z-index:10000">
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="js/navbar.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  
   <link rel="stylesheet" href="css/generic.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <div style="background-color:#282828">
-<!--Navbar-->
+
+
+  <!-- POPOUT -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Popup Title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>This is the popup content.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="mylocalStorage['privKeyInfoAck'] = 1">Acknowledge</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!--Navbar-->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark primary-color">
 
   <!-- Navbar brand -->
@@ -48,6 +74,14 @@
     <div class="navbar-text" id="counter" style="color:#228B22"></div>
     <button type="button" class="btn btn-danger btn-sm" id='EndSession' style="display:none; margin-left:10px;"
 	data-toggle="modal" data-target="#modalSession" >End Session</button>
+    
+    <!-- Download Keys-->
+    <form method="get" action="keys.txt">
+      <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        Download Private Key
+      </button>
+    </form>
+    
   
     <!-- Dropdown -->
     <li class="nav-item dropdown ml-md-auto" id="dropdownMaster">
