Started on another version of OSF front-end

--- a/Attempt_2/html/navbar.html
+++ b/Attempt_2/html/navbar.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <header class="sticky-top" style="z-index:10000">
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="js/navbar.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-  
-  <link rel="stylesheet" href="css/generic.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <div style="background-color:#282828">
 
@@ -86,7 +81,7 @@
     <!-- Dropdown -->
     <li class="nav-item dropdown ml-md-auto" id="dropdownMaster">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdownMaster"
-          aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          aria-haspopup="true" aria-expanded="false" stye="display>Dropdown</a>
         <ul class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink" id="menuMaster">
           <li><a class="dropdown-item" id='MyAccount'>My Account</a></li>
           <li class="dropdown-submenu" id="dropdownSecondary">
